re-added erouneously removed js for toggling menu description visiblity book info page: cover and book info working again main js code moved to external file

--- a/manga_db/webGUI/sass/style.scss
+++ b/manga_db/webGUI/sass/style.scss
@@ -19,10 +19,10 @@ $grey-darker-mdb: #191919;
 $grey-dark-mdb: hsl(0, 0%, 14%);// same as $black-ter//#2d2d2d;
 // $purple: #a233a5;
 $pink: #ff2871;
-$blue: #1498ff;
+$blue: #1498ff; //custom
 // $dark: #2d2d2d;
-// $red: #e42323;
-// $green: #31c131;
+$red: #e42323; //custom
+$mdb-green: #31c131; //custom
 
 // 3. Set the derived variables
 // Update Bulma's global variables
@@ -44,6 +44,7 @@ $link: #fff;
 $link-invert: $link;
 $link-hover: $link;//lighten($primary, 15%);
 //$link-hover-border: $primary;
+$title-color: $scheme-invert-bis;
 
 // Update some of Bulma's component variables
 $body-background-color: $grey-darker-mdb;
@@ -67,6 +68,19 @@ $dropdown-item-hover-color: $text;
 $dropdown-item-hover-background-color: $scheme-main-ter;
 $dropdown-item-active-color: $primary;
 $dropdown-item-active-background-color: $scheme-main;
+
+$button-color: $text;
+$button-background-color: $scheme-main;
+$button-border-color: transparent;
+$button-hover-color: $text;
+$button-hover-border-color: $scheme-invert-ter;
+$button-focus-color: $button-color;
+$button-focus-border-color: $button-hover-border-color;
+$button-active-color: $button-color;
+$button-active-border-color: $button-hover-border-color;
+
+$tag-background-color: $grey-darker;
+$tag-color: $text;
 
 body {
     //font-family: 'Open Sans',sans-serif!important;
@@ -267,6 +281,22 @@ body {
 }
 #page-prev {
     left: 0;
+}
+
+.book-info-table {
+    //  Using @extend lets you share a set of CSS properties from one selector to another
+    @extend .table;
+    background-color: $body-background-color;
+    color: $text;
+    // sass allows nesting: nav { ul {..} } is the same as: nav ul {..}
+    td, th {
+        border: none;
+        padding: 0.35em 0.5em;
+    }
+
+    th {
+        color: $scheme-invert-ter;
+    }
 }
 // .button-leftmost {
 //     margin-left: 0;
